--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -42,7 +42,7 @@
   <div class="form-group">
     <%= f.label 'Fecha Atencion', class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.date_select :fecha, order: [:day, :month, :year], class: "form-control" %>
+      <%= f.date_select :fecha, order: [:day, :month, :year], use_month_numbers: true, class: "form-control" %>
     </div>
   </div>
 
