--- a/app/views/humen/_form.html.erb
+++ b/app/views/humen/_form.html.erb
@@ -21,7 +21,15 @@
   <div class="form-group">
     <%= f.label :sexo, class: "col-sm-2 control-label" %>
     <div class="col-sm-2">
-      <%= f.text_field :sexo, class: "form-control" %>
+      <%= f.select :sexo, options_for_select(
+                                              [["Sin Asignar", "Sin asignar"], 
+                                               ["Hombre", "Hombre"],
+                                               ["Mujer", "Mujer"],
+                                               ["Hermafrodita", "Hermafrodita"],
+                                               ["Asexuado", "Asexuado"]],
+                                               {:selected => @human.sexo}
+                                              ) %>
+
     </div>
   </div>
   <div class="form-group">
