--- a/app/views/humen/_form.html.erb
+++ b/app/views/humen/_form.html.erb
@@ -28,7 +28,7 @@
                                                ["Hermafrodita", "Hermafrodita"],
                                                ["Asexuado", "Asexuado"]],
                                                {:selected => @human.sexo}
-                                              ) %>
+                                              ), class: "dropdown" %>
 
     </div>
   </div>
