--- a/app/views/humen/_form.html.erb
+++ b/app/views/humen/_form.html.erb
@@ -27,8 +27,8 @@
                                                ["Mujer", "Mujer"],
                                                ["Hermafrodita", "Hermafrodita"],
                                                ["Asexuado", "Asexuado"]],
-                                               {:selected => @human.sexo}
-                                              ), class: "dropdown" %>
+                                               {:selected => @human.sexo}, {class: "form-control"}
+                                              ) %>
 
     </div>
   </div>
