--- a/app/views/humen/_form.html.erb
+++ b/app/views/humen/_form.html.erb
@@ -21,13 +21,14 @@
   <div class="form-group">
     <%= f.label :sexo, class: "col-sm-2 control-label" %>
     <div class="col-sm-2">
-      <%= f.select :sexo, options_for_select(
+      <%= f.select (:sexo, options_for_select(
                                               [["Sin Asignar", "Sin asignar"], 
                                                ["Hombre", "Hombre"],
                                                ["Mujer", "Mujer"],
                                                ["Hermafrodita", "Hermafrodita"],
-                                               ["Asexuado", "Asexuado"]],
-                                               {:selected => @human.sexo}, {class: "form-control"}
+                                               ["Asexuado", "Asexuado"]]),
+                                               {:selected => @human.sexo}, 
+                                               {class: "form-control"}
                                               ) %>
 
     </div>
