--- a/app/views/humen/edit.html.erb
+++ b/app/views/humen/edit.html.erb
@@ -10,4 +10,11 @@
   <h1>Editar Paciente</h1>
 </div>
 
-<%= render 'form' %>
+<div class="panel panel-default">
+  <div class="panel-body">
+
+    <%= render 'form' %>
+
+
+  </div>
+</div>   
