--- a/app/views/humen/new.html.erb
+++ b/app/views/humen/new.html.erb
@@ -6,4 +6,11 @@
   <h1>Nuevo Paciente</h1>
 </div>
 
-<%= render 'form' %>
+<div class="panel panel-default">
+  <div class="panel-body">
+
+    <%= render 'form' %>
+
+
+  </div>
+</div>   
