--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -11,4 +11,11 @@
   <h1>Editar Ficha de Atencion</h1>
 </div>
 
-<%= render 'form' %>
+<div class="panel panel-default">
+  <div class="panel-body">
+
+    <%= render 'form' %>
+
+
+  </div>
+</div>   
