--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -6,35 +6,45 @@
   <h1>Atenciones Realizadas</h1>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-            <th>Fecha</th>
-            <th>Nombre</th>
-            <th>Sexo</th>
-            <th>Edad</th>
-            <th>Ocupacion</th>
-            <th>Estado civil</th>
 
+<div class="panel panel-default">
+  <div class="panel-body">
+
+
+
+    <div class="table-responsive">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+                <th>Fecha</th>
+                <th>Nombre</th>
+                <th>Sexo</th>
+                <th>Edad</th>
+                <th>Ocupacion</th>
+                <th>Estado civil</th>
+
+                <th></th>
             <th></th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
+            <th></th>
+          </tr>
+        </thead>
 
-    <tbody>
-      <%= content_tag_for(:tr, @patients) do |patient| %>
-            <td><%= patient.fecha %></td>
-            <td><%= patient.nombre %></td>
-            <td><%= patient.sexo %></td>
-            <td><%= patient.edad %></td>
-            <td><%= patient.ocupacion %></td>
-            <td><%= patient.estado_civil %></td>
-            <td><%= link_to 'Ver', [patient.human, patient] %></td>
-        <td><%= link_to 'Editar', edit_human_patient_path(patient.human, patient) %></td>
-        <td><%= link_to 'Borrar', [patient.human, patient], method: :delete, data: { confirm: 'Seguro Segurin Segurolas?' } %></td>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+        <tbody>
+          <%= content_tag_for(:tr, @patients) do |patient| %>
+                <td><%= patient.fecha %></td>
+                <td><%= patient.nombre %></td>
+                <td><%= patient.sexo %></td>
+                <td><%= patient.edad %></td>
+                <td><%= patient.ocupacion %></td>
+                <td><%= patient.estado_civil %></td>
+                <td><%= link_to 'Ver', [patient.human, patient] %></td>
+            <td><%= link_to 'Editar', edit_human_patient_path(patient.human, patient) %></td>
+            <td><%= link_to 'Borrar', [patient.human, patient], method: :delete, data: { confirm: 'Seguro Segurin Segurolas?' } %></td>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+
+  </div>
+</div>   
