--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -7,4 +7,11 @@
   <h1>Nueva Ficha de Atencion</h1>
 </div>
 
-<%= render 'form' %>
+<div class="panel panel-default">
+  <div class="panel-body">
+
+    <%= render 'form' %>
+
+
+  </div>
+</div>   
