--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -7,24 +7,31 @@
   <h1>Listado de Temas</h1>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-            <th>Nombre</th>
-            <th></th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
+<div class="panel panel-default">
+  <div class="panel-body">
 
-    <tbody>
-      <%= content_tag_for(:tr, @tags) do |tag| %>
-            <td><%= tag.etiqueta %></td>
-            <td><%= link_to 'Ver', tag %></td>
-        <td><%= link_to 'Editar', edit_tag_path(tag) %></td>
-        <td><%= link_to 'Borrar', tag, method: :delete, data: { confirm: 'Seguro Segurin Segurolas?' } %></td>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+    <div class="table-responsive">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+                <th>Nombre</th>
+                <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <%= content_tag_for(:tr, @tags) do |tag| %>
+                <td><%= tag.etiqueta %></td>
+                <td><%= link_to 'Ver', tag %></td>
+            <td><%= link_to 'Editar', edit_tag_path(tag) %></td>
+            <td><%= link_to 'Borrar', tag, method: :delete, data: { confirm: 'Seguro Segurin Segurolas?' } %></td>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+
+  </div>
+</div>   
