--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label 'Tema', class: "col-sm-2 control-label" %>
+    <%= f.label 'Nombre del Tema', class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :etiqueta, class: "form-control" %>
     </div>
