--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-plus"></span>
     Nueva Atencion
   <% end %>
-  <h1>Atenciones Realizadas</h1>
+  <h1>Historial de Atenciones de <%= @human.nombre %> </h1>
 </div>
 
 
